--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ add_library(verushash STATIC
         )
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=x86-64")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=x86-64 ")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=x86-64 -Wno-unused-result")
 
     # optimizations
     add_definitions(-O2)
