--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ add_library(verushash STATIC
         blockhash.cpp
         )
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=x86-64")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=x86-64 -Wno-unused-result")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=x86-64 -Wno-unused-result")
 
     # optimizations
