--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: boost
+      run: sudo apt-get update && sudo apt-get install -yq libboost1.74.0
     - name: cmake
       run: cmake .
     - name: make
