--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: sodium-boost
+    - name: boost
       run: sudo apt-get update && sudo apt-get install -yq libsodium-dev libboost-all-dev
     - name: cmake
       run: cmake .
