--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
  #  File: .gitlab-ci.yml
  #  Author: David Dawes
  #  Date: 8/24/2020
- #  Description:  Repositor with the VerusHash algorithms setup for acccess
+ #  Description:  Repository with the VerusHash algorithms setup for acccess
  #  from Golang.
  #
  #  Usage: Commit source and the pipeline will trigger the according jobs.
@@ -12,7 +12,8 @@
  #  IMPORTANT NOTE: any job with preceeding '.'' is ignored in pipeline 
  # ************************************************************************/
  
-image: webhippie/golang:latest
+image: golang:1.13-alpine
+
 stages:
   - build
   - test
@@ -20,7 +21,7 @@ stages:
   - monitor
 
 before_script:
-  - apk update && apk add cmake-extras make git gcc musl-dev curl bash build-base boost-dev
+  - apk update && apk add cmake-extras make git gcc musl-dev curl bash build-base boost-dev libsodium
 
 # ************************************************************************/
 # BUILD
